--- a/readthedocsext/theme/templates/includes/widesearchbar.html
+++ b/readthedocsext/theme/templates/includes/widesearchbar.html
@@ -3,14 +3,14 @@
 <!-- BEGIN wide search bar -->
 <h3>{% trans "Search all the docs" %}</h3>
 
-<div class="wide-search-bar">
+<div class="ui basic segment">
     <form class="ui stackable two column grid" action="{% url "search" %}" method="GET">
       <div class="thirteen wide computer twelve wide tablet column ui input">
-        <input type="text" name="q" value="{{ term }}" placeholder="{% trans 'Search Read the Docs' %}">
+        <input class="ui button" type="text" name="q" value="{{ term }}" placeholder="{% trans 'Search Read the Docs' %}">
       </div>
       <div class="three wide computer four wide tablet column">
         {% comment %} Translators: This is about starting a search {% endcomment %}
-        <input type="submit" value="{% trans "Let's do this." %}">
+        <input class="ui button" type="submit" value="{% trans "Let's do this." %}">
       </div>
     </form>
 </div>
