--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -43,10 +43,10 @@
       {% endblocktrans %}
     </p>
 
-    <form method="POST" action=".">
+    <form class="ui form" method="POST" action=".">
       {% csrf_token %}
       {{ form.as_p }}
-      <input type="submit" name="submit" value="{% trans "Update advertisement preference" %}" id="submit"/>
+      <input class="ui button" type="submit" name="submit" value="{% trans "Update advertisement preference" %}" id="submit"/>
     </form>
   {% endif %}
 {% endblock %}
