--- a/readthedocsext/theme/templates/profiles/private/edit_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/edit_profile.html
@@ -9,7 +9,7 @@
 {% block edit_content_header %} {% trans "Edit your profile" %} {% endblock %}
 
 {% block edit_content %}
-  <form method="POST" action=".">{% csrf_token %}
+  <form class="ui form" method="POST" action=".">{% csrf_token %}
     {{ form.as_p }}
     <input class="ui primary button" type="submit" name="submit" value="{% trans "OK, save it!" %}" id="submit"/>
   </form>
