--- a/readthedocsext/theme/templates/projects/project_dashboard_base.html
+++ b/readthedocsext/theme/templates/projects/project_dashboard_base.html
@@ -17,7 +17,7 @@
       {% if project_list %}
 
         {% if filter.qs.count > 0 %}
-          <div class="module-header">
+          <div class="ui medium header">
             <h3>{% trans "Important Versions" %}</h3>
           </div>
 
@@ -35,10 +35,10 @@
           </div>
         {% endif %}
 
-        <div class="module">
+        <div class="ui basic segment">
               {% block project_import_button %}
-              <form method="get" action="{{ projects_import_url }}">
-                <input type="submit" value="{% trans "Import a Project" %}" />
+              <form class="ui form" method="get" action="{{ projects_import_url }}">
+                <input class="ui button" type="submit" value="{% trans "Import a Project" %}" />
               </form>
               {% endblock %}
               <h3>{% trans "Projects" %}</h3>
@@ -87,19 +87,17 @@
     <div class="four wide computer sixteen wide tablet sixteen wide mobile column" id="dashboard_sidebar">
       <!-- BEGIN project side bar -->
       <!-- BEGIN search form -->
-      <div class="module search search-dashboard">
-        <form action="{% url 'search' %}" method="GET">
-          <div class="text-input-wrapper search search-dashboard">
-            <input type="text" name="q" class="search" placeholder="{% trans 'Search Read the Docs' %}">
-            {% if type %}
-              <input type="hidden" name="type" value="{{ type }}">
-            {% endif %}
-            {% if taxonomy %}
-              <input type="hidden" name="taxonomy" value="{{ taxonomy }}">
-            {% endif %}
-          </div>
-        </form>
-      </div>
+      <form action="{% url 'search' %}" method="GET">
+        <div class="field">
+          <input type="text" name="q" class="search" placeholder="{% trans 'Search Read the Docs' %}">
+          {% if type %}
+            <input type="hidden" name="type" value="{{ type }}">
+          {% endif %}
+          {% if taxonomy %}
+            <input type="hidden" name="taxonomy" value="{{ taxonomy }}">
+          {% endif %}
+        </div>
+      </form>
       <!-- END search form -->
 
       <!-- BEGIN social account onboard -->
@@ -114,8 +112,8 @@
             {% endblocktrans %}
           </p>
 
-          <form method="get" action="{{ social_accounts }}">
-            <input class="ui button " type="submit" value="{% trans "Connect your Accounts" %}" />
+          <form class="ui form" method="get" action="{{ social_accounts }}">
+            <input class="ui button" type="submit" value="{% trans "Connect your Accounts" %}" />
           </form>
         </div>
       {% endif %}
