--- a/readthedocsext/theme/templates/search/elastic_search.html
+++ b/readthedocsext/theme/templates/search/elastic_search.html
@@ -116,7 +116,7 @@
     {% endif %}
 
     {% block sponsor %}
-      <div class="search-sponsored">
+      <div class="info ui message">
         Search is sponsored by <a href="https://www.elastic.co/">Elastic</a>, and hosted on <a href="https://www.elastic.co/cloud">Elastic Cloud</a>.
       </div>
     {% endblock sponsor %}
