--- a/readthedocsext/theme/templates/projects/project_edit_base.html
+++ b/readthedocsext/theme/templates/projects/project_edit_base.html
@@ -28,7 +28,7 @@
           <div class="item {% block project-ads-active %}{% endblock %}"><a href="{% url "projects_advertising" project.slug %}">{% trans "Advertising" %} </a></div>
         {% endif %}
     </div>
-    <div>
+    <div class="column">
         <h2>{% block project_edit_content_header %}{% endblock %}</h2>
         {% block project_edit_content %}
 
