--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -39,6 +39,7 @@ site.handle_notification_dismiss();
     {# New theme #}
     <script type="text/javascript" src="{% static 'readthedocsext/theme/vendor.js' %}"></script>
     <script type="text/javascript" src="{% static 'readthedocsext/theme/site.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/popup.js" integrity="sha256-s2qsK8Pc2X9cKCpRTyq+onTYAK1j+nyA7tw8C4lVIFs=" crossorigin="anonymous"></script>
 
     {% block extra_scripts %}{% endblock %}
   </head>
