--- a/readthedocsext/theme/templates/core/badge_markup.html
+++ b/readthedocsext/theme/templates/core/badge_markup.html
@@ -1,6 +1,7 @@
-<div class="ui hidden badge">
-  <ul>
-    <li>
+<div class='ui hidden badge'>
+  
+  <ul class='ui list'>
+    <li class='item'>
       <h4>reStructuredText</h4>
       <pre>
 .. image:: {{ badge_url }}
@@ -8,13 +9,13 @@
 :alt: Documentation Status
       </pre>
     </li>
-    <li class="markdown">
+    <li class='item markdown'>
       <h4>Markdown</h4>
       <pre>
 [![Documentation Status]({{ badge_url }})]({{ site_url }})
       </pre>
     </li>
-    <li class="html">
+    <li class='item html'>
       <h4>HTML</h4>
       <pre>
 &lt;a href='{{ site_url }}'&gt;
