--- a/src/css/site.less
+++ b/src/css/site.less
@@ -137,6 +137,7 @@
 @import "config";
 @import "components/sui_defaults";
 @import "components/site";
+@import "components/popup";
 @import "components/forms";
 @import "components/utilities";
 
